# libmove3d-planners

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  libmove3d-planners.files  libmove3d-planners.includes
libmove3d-motion/libmove3d-motion.xcodeproj/: project.pbxproj
libmove3d-planners/libmove3d-planners.xcodeproj/: project.pbxproj
pkgconfig/: CMakeLists.txt  Move3D-motionPlanner-libs.pc.cmake  libmove3d-motionplanner.pc.cmake  libmove3d-planners.pc.cmake
script/: copySourceFiles.sh
script/CMake/: FindBALL.cmake  FindBIOMOVE3D.cmake  FindEIGEN.cmake  FindEIGEN.cmake.orig  FindGBM.cmake  FindGLEW.cmake  FindGLIB.cmake  FindGLIBCONFIG.cmake  FindGLIBCONFIG.cmake.orig  FindGLPK.cmake  FindGLU.cmake  FindGMODULE.cmake  FindGSL.cmake  FindGTHREAD.cmake  FindGTS.cmake  FindHRP2_GIK.cmake  FindLIBMOVE3D.cmake  FindMOVE3D-CORE.cmake  FindOOMOVE3D-CORE.cmake  FindPackageTemplate.cmake  FindQHULL.cmake  FindQWT.cmake  FindROBOPTIM.cmake  FindSOFTMOTION.cmake  FindSOFTMOTION.cmake.orig  FindXFORMS.cmake  FindXPM.cmake  createSourceList
src/: SourceList.cmake  qtPlot
src/API/: SourceList.cmake  libmove3d_api.cpp  libmove3d_api.hpp  libmove3d_simple_api.cpp  libmove3d_simple_api.hpp  misc_functions.cpp  misc_functions.hpp  planningAPI.hpp  project.cpp  project.hpp  scene.cpp  scene.hpp
src/API/ConfigSpace/: SourceList.cmake  configuration.cpp  configuration.hpp  cspace.cpp  cspace.hpp  localPathValidTest.cpp  localPathValidTest.hpp  localpath.cpp  localpath.hpp  localpath_factory.cpp  localpath_factory.hpp  sampling_api.cpp  sampling_api.hpp
src/API/Device/: SourceList.cmake  generalik.cpp  generalik.hpp  joint.cpp  joint.hpp  robot.cpp  robot.hpp
src/API/Graphic/: SourceList.cmake  drawCost.cpp  drawCost.hpp  drawModule.cpp  drawModule.hpp
src/API/Grids/: BaseCell.cpp  BaseCell.hpp  BaseGrid.cpp  BaseGrid.hpp  GridCube.hpp  NDCell.cpp  NDCell.hpp  NDGrid.cpp  NDGrid.hpp  PointCloud.cpp  PointCloud.hpp  SignField.cpp  SignField.h  SignField.hpp  SignFieldCell.cpp  SignFieldCell.h  SignFieldCell.hpp  SourceList.cmake  ThreeDCell.cpp  ThreeDCell.h  ThreeDCell.hpp  ThreeDGrid.cpp  ThreeDGrid.h  ThreeDGrid.hpp  ThreeDPoints.cpp  ThreeDPoints.h  TwoDCell.cpp  TwoDCell.hpp  TwoDGrid.cpp  TwoDGrid.hpp  gridsAPI.hpp
src/API/Roadmap/: .node.cpp.swp  BGL_Graph.hpp  SourceList.cmake  compco.cpp  compco.hpp  edge.cpp  edge.hpp  graph.cpp  graph.hpp  graphConverter.cpp  graphConverter.hpp  graphSampler.cpp  graphSampler.hpp  node.cpp  node.hpp
src/API/Search/: GraphState.cpp  (+3 more)
src/HRI_costspace/: HRICS_ConfigSpace.cpp  HRICS_ConfigSpace.hpp  HRICS_Distance.cpp  HRICS_Distance.hpp  HRICS_HAMP.cpp  HRICS_HAMP.hpp  HRICS_Miscellaneous.cpp  HRICS_Miscellaneous.hpp  HRICS_Natural.cpp  HRICS_Natural.hpp  HRICS_Navigation.cpp  HRICS_Navigation.hpp  HRICS_Visibility.cpp  HRICS_Visibility.hpp  HRICS_Workspace.cpp  HRICS_Workspace.hpp  HRICS_costspace.cpp  HRICS_costspace.hpp  HRICS_humanCostSpace.cpp  HRICS_humanCostSpace.hpp  HRICS_old.cpp  HRICS_old.hpp  HRICS_otpmotionpl.cpp  HRICS_otpmotionpl.hpp  SourceList.cmake
src/collision_space/: BodySurfaceSampler.cpp  BodySurfaceSampler.hpp  CollisionPoint.cpp  CollisionPoint.hpp  CollisionSpace.cpp  CollisionSpace.hpp  CollisionSpaceCell.cpp  CollisionSpaceCell.hpp  SourceList.cmake  body_surface_sampler.cpp  body_surface_sampler.hpp  collision_point.cpp  collision_point.hpp  collision_space.cpp  collision_space.hpp  collision_space_factory.cpp  collision_space_factory.hpp
src/feature_space/: SourceList.cmake  boxes.cpp  boxes.hpp  clearance.cpp  clearance.hpp  features.cpp  features.hpp  planar_feature.cpp  planar_feature.hpp  smoothness.cpp  smoothness.hpp  spheres.cpp  spheres.hpp  spheres_3d.cpp  spheres_3d.hpp  squares.cpp  squares.hpp
src/hri_costspace/: HRICS_ConfigSpace.cpp  HRICS_ConfigSpace.hpp  HRICS_Distance.cpp  HRICS_Distance.hpp  HRICS_HAMP.cpp  HRICS_HAMP.hpp  HRICS_Legibility.cpp  HRICS_Legibility.hpp  HRICS_Miscellaneous.cpp  HRICS_Natural.cpp  HRICS_Natural.hpp  HRICS_Navigation.cpp  HRICS_Navigation.hpp  HRICS_Visibility.cpp  HRICS_Visibility.hpp  HRICS_Workspace.cpp  HRICS_Workspace.hpp  HRICS_config_space.cpp  HRICS_config_space.hpp  HRICS_costspace.cpp  HRICS_costspace.hpp  HRICS_distance.cpp  HRICS_hamp.cpp  HRICS_hamp.hpp  HRICS_humanCostSpace.cpp  HRICS_humanCostSpace.hpp  HRICS_human_cost_space.cpp  HRICS_human_cost_space.hpp  HRICS_legibility.cpp  HRICS_legibility.hpp  HRICS_miscellaneous.cpp  HRICS_miscellaneous.hpp  HRICS_natural.cpp  HRICS_natural.hpp  HRICS_navigation.cpp  HRICS_navigation.hpp  HRICS_old.cpp  HRICS_old.hpp  HRICS_otpmotionpl.cpp  HRICS_otpmotionpl.hpp  (+7 more)
src/planner/: SourceList.cmake  cost_space.cpp  cost_space.hpp  planEnvironment.cpp  planEnvironment.cpp.orig  planEnvironment.hpp  planEnvironment.hpp.orig  planner.cpp  planner.hpp  plannerFunctions.cpp  plannerFunctions.hpp  plannerSequences.cpp  plannerSequences.hpp  planner_handler.cpp  planner_handler.hpp  planners_cxx.hpp  replanning.cpp  replanning.hpp  replanningAlgorithms.cpp  replanningAlgorithms.hpp  replanningSimulators.cpp  replanningSimulators.hpp  test_functions.cpp  untitled.cpp
src/qtUI/: SourceList.cmake  cppToQt.cpp  cppToQt.hpp  glutWindow.cpp  glutWindow.hpp  main.cpp  main.hpp  qtLibrary.hpp
src/test/: main.cpp
src/tests/: SourceList.cmake  main.cpp  test_control_costs.cpp  test_dtw.cpp  test_features.cpp  test_fft.cpp  test_goal_set_project.cpp  test_random_generator.cpp  test_rotations.cpp  test_save_to_file.cpp  test_vector_trajectory.cpp
src/utils/: ConfGenerator.cpp  ConfGenerator.h  MultiRun.cpp  MultiRun.hpp  NumsAndStrings.cpp  NumsAndStrings.hpp  OtpUtils.cpp  OtpUtils.hpp  PlanningThread.cpp  PlanningThread.h  PlanningThread.hpp  RecordMotion.cpp  RecordMotion.hpp  SaveContext.cpp  SaveContext.hpp  SourceList.cmake  StatCostStructure.cpp  StatCostStructure.hpp  Statistics.cpp  Statistics.hpp  eigen_transition.hpp  ik_generator.cpp  ik_generator.hpp  misc_functions.cpp  misc_functions.hpp  multilocalpath_utils.cpp  multilocalpath_utils.hpp  pr2_mapping.cpp  pr2_mapping.hpp  testModel.cpp  testModel.hpp
(+465 files in other folders)
